--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "http": "0.0.0",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
